# Obligatorio_IA

./: README.md
Obligatorio/QLearning/: continuous_mountain_car.ipynb  continuous_mountain_car_env_extended.py  modelo_entrenado.pkl  pyproject.toml  q_learning_agent.py
Obligatorio/ThreeMusketeers/: board.py  captain_pete.py  input_agent.py  play.py  pyproject.toml  random_agent.py  strategic_agent.py  three_musketeers.ipynb  three_musketeers_env.py
