[tool.poetry]
name = "threemusketeers"
version = "0.1.0"
description = "Ambiente Ejercicio 2 Obligatorio IA Agosto 2024"
authors = ["AlejoGarat"]
package-mode = false

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^2.1.2"
gymnasium = "^1.0.0"
matplotlib = "^3.9.2"
opencv-python = "^4.10.0.84"
tqdm = "^4.66.6"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
notebook = "^7.2.1"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
